<resources>
    <string name="app_name">Cryptodash Authenticator</string>
    <!-- Action Bar Menu -->
    <string name="select_account">Accounts</string>
    <string name="register_new_account">Link Account</string>
    <string name="test_device">Test Device</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="begin_tests">Begin Tests</string>
    <string name="welcome_blurb">Welcome to Cryptodash Authenticator. To get started right away, tap the "Link Account" button.
        If you want to learn more about what this app is and how it works, tap the "How it Works" button.</string>
    <string name="how_it_works">How it Works</string>
    <string name="authenticator_description">Below is your current one-time code for %1$s:</string>
    <string name="title_activity_register_account">Link Account</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="select_camera">Choose Camera</string>
    <string name="select_method_blurb">The easiest way to link your Cryptodash account is by scanning the provided QR code.
        If you don\'t have a working camera, you can still enter the code manually.</string>
    <string name="register_account_data_blurb">Verify that the following information is correct to continue:</string>
    <string name="label">Email:</string>
    <string name="key">Key:</string>
    <string name="sample_key">Ne2WwwXegWzlHuD0eriSXx1EaxmQiEW8QMCRcn5RJ78=</string>
    <string name="information_correct">Correct</string>
    <string name="information_incorrect">Incorrect</string>
    <string name="manual_entry_blurb">Enter the label address associated with your Cryptodash account and the two-factor key provided to you.</string>
    <string name="okay">Okay</string>
    <string name="no">No</string>
    <string name="email_hint">Your Email</string>
    <string name="scan_qrcode">Scan QR Code</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="invalid_key">Invalid Key</string>
    <string name="empty_key">Key is empty</string>
    <string name="invalid_char_key">Key contains illegal characters</string>
    <string name="key_too_short">Key is too short</string>
    <string name="key_equals_missing">Key is missing \'=\'</string>
    <string name="key_equals_misplaced">Key contains misplaced \'=\'</string>
    <string name="not_now">Not Now</string>
    <string name="rescan">Rescan</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="set_as_default">Set as default account</string>
    <string name="centurion_invalid_args">The label address and/or key you provided is invalid. Please verify
    that they are correct, and try again.</string>
    <string name="done">Done</string>
    <string name="no_accounts">You have no linked accounts!</string>
    <string name="check_accounts">Check Accounts</string>
    <string name="test_number_sign">Test #</string>
    <string name="result">Result</string>
    <string name="verifying_credentials_title">Please wait…</string>
    <string name="verifying_credentials">Verifying the credentials you entered.</string>

    <!-- Settings related strings -->
    <string name="general_cat">General</string>
    <string name="skip_choose">Skip choosing account</string>
    <string name="skip_choose_summ">When the default account is specified</string>
    <string name="default_account">Default account</string>
    <string name="default_account_summ">Go directly to this account\'s authenticator</string>
    <string name="sound_effects_cat">Sound Effects</string>
    <string name="play_scan_sound">Play scan sound effect</string>
    <string name="play_scan_sound_summ">When a QR code is successfully scanned</string>
    <string name="play_time_running_out_sound">Play clock-ticking sound</string>
    <string name="play_time_running_out_sound_summ">When time is running out in current cycle</string>
    <string name="time_running_out_start">Start clock-ticking sound</string>
    <string name="time_running_out_start_summ">When X seconds remain in the current time cycle</string>
    <string name="none">None</string>

    <!-- ACRA (Application Crash Reports for Android) related strings -->
    <string name="crash_toast_text">An error has occurred - please consider reporting this.</string>
    <string name="crash_dialog_title">Cryptodash Error</string>
    <string name="crash_dialog_text">Sorry, an unexpected error has occurred that we can\'t recover from. We would greatly
    appreciate you reporting this error to us so that we can fix it.</string>
    <string name="crash_dialog_ok_toast">Thank you for reporting the error!</string>
    <string name="cancel">cancel</string>
    <string name="verify_manual_blurb">Please verify that the information you entered matches what\'s entered below:</string>
    <string name="verify_qrcode_blurb">Please verify that the information below matches the QR code you scanned.</string>
    <string name="provider">Provider:</string>
</resources>
