<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_select_account"
        android:icon="@drawable/ic_account_box_white_24dp"
        android:orderInCategory="100"
        android:title="@string/select_account"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_register_new_account"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/register_new_account"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_test_device"
        android:icon="@drawable/ic_flask_white_24dp"
        android:orderInCategory="100"
        android:title="@string/test_device"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_description_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>
