<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:autofit="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="net.cryptodirect.authenticator.ManualEntryFragment">

    <me.grantland.widget.AutofitTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:gravity="start"
        android:maxLines="3"
        android:text="@string/manual_entry_blurb"
        android:textColor="#f2f2f2"
        android:textSize="22sp"
        autofit:minTextSize="16sp"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/email_label"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignStart="@+id/email_label"
        android:layout_below="@+id/email_label"
        android:layout_marginTop="33dp"
        android:background="#f4f4f4"
        android:ems="16"
        android:enabled="true"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minWidth="150dp"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:textColor="#212121"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="0dp"
        android:text="@string/email"
        android:textColor="#f2f2f2"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/key_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/key_label"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignStart="@+id/key_label"
        android:layout_below="@+id/key_label"
        android:layout_marginTop="33dp"
        android:background="#f4f4f4"
        android:elegantTextHeight="true"
        android:enabled="true"
        android:gravity="top|start"
        android:hint="@string/sample_key"
        android:inputType="textUri|textMultiLine"
        android:maxLength="44"
        android:maxWidth="320dp"
        android:minWidth="120dp"
        android:paddingBottom="3dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:textColor="#212121"
        android:textSize="20sp"
        android:typeface="monospace"/>

    <TextView
        android:id="@+id/key_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_edit_text"
        android:layout_alignStart="@+id/email_edit_text"
        android:layout_below="@+id/email_edit_text"
        android:layout_marginTop="30dp"
        android:text="@string/key"
        android:textColor="#f2f2f2"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:drawableTint="@color/md_green_800"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:drawableLeft="@drawable/ic_check_white_24dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_check_white_24dp"
        android:onClick="handleOkayButtonClicked"
        android:padding="22dp"
        android:text="@string/okay"
        android:textColor="#f3f3f3"
        android:textSize="16sp"
        />

</RelativeLayout>
