<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:autofit="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#212121"
              android:clickable="true"
              android:orientation="vertical"
              tools:context="net.cryptodirect.authenticator.SelectRegisterMethodFragment">

    <me.grantland.widget.AutofitTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:maxLines="5"
        android:text="@string/select_method_blurb"
        android:textColor="#f2f2f2"
        android:textSize="22sp"
        autofit:minTextSize="16sp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:measureWithLargestChild="false"
        android:orientation="vertical"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <Button
                android:id="@+id/scan_qr_code_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_qrcode_white_36dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_qrcode_white_36dp"
                android:elevation="10dp"
                android:enabled="true"
                android:onClick="handleScanQRCodeClicked"
                android:padding="20dp"
                android:singleLine="true"
                android:text="@string/scan_qrcode"
                android:textColor="#f3f3f3"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <Button
                android:id="@+id/manual_entry_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_keyboard_white_36dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_keyboard_white_36dp"
                android:elevation="10dp"
                android:enabled="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="handleManualEntryClicked"
                android:paddingBottom="20dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:text="@string/manual_entry"
                android:textColor="#f3f3f3"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
